Fix accessibility issues

--- a/index.html
+++ b/index.html
@@ -47,9 +47,14 @@
                                 <input type="text" id="email" name="email" class="main-input">
                                 <label for="email" class="js-label">EMAIL</label>
                             </div>
-                            <label class="newsletter"><input type="checkbox" name="newsletter"><span class="check"><i
-                                        class="fas fa-check"></i></span> <span class="check-info">Have you ever played
-                                    Valorant? It's really, really an awesome game!</span>
+                            <label class="newsletter">
+                                <input type="checkbox" name="newsletter">
+                                <span class="check">
+                                    <i class="fas fa-check"></i>
+                                </span>
+                                <span class="check-info">Have you ever played
+                                    Valorant? It's a really, really awesome game!
+                                </span>
                             </label>
                         </div>
                         <div class="form-socials">
@@ -158,8 +163,8 @@
                     <div class="form-control page-submit">
                         <div class="inner-wrap submit-wrap">
                             <h2>Thanks for checking it out :)</h2>
-                            <label class="newsletter main-input"><input id="submit-checkbox" name="submit-checkbox"
-                                    type="checkbox">
+                            <label class="newsletter main-input">
+                                <input id="submit-checkbox" name="submit-checkbox" type="checkbox">
                                 <span class="check">
                                     <i class="fas fa-check"></i>
                                 </span>
