--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Form Validation</title>
+    <title>Valorant Vanilla Form</title>
 
+    <!-- fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Montserrat:wght@300;500;700&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+
+    <!-- custom stylesheets -->
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/rwd.css">
 </head>
 
 <body>
@@ -34,127 +38,131 @@
             </div>
         </div>
 
-        <h1>create an<br> account</h1>
+        <h1>create an account</h1>
 
         <div class="form-wrap">
-            <form action="https://formspree.io/f/mbjpzwvb" method="POST" id="form">
+            <form action="https://formspree.i/f/mbjpzwvb" method="POST" id="form">
                 <form action="#" method="POST" id="form">
 
-                    <div class="form-control page-email active">
-                        <h2>What's your email?</h2>
-                        <div class="inner-wrap">
-                            <div class="input-wrap">
-                                <input type="text" id="email" name="email" class="main-input">
-                                <label for="email" class="js-label">EMAIL</label>
-                            </div>
-                            <label class="newsletter">
-                                <input type="checkbox" name="newsletter">
-                                <span class="check">
-                                    <i class="fas fa-check"></i>
-                                </span>
-                                <span class="check-info">Have you ever played
-                                    Valorant? It's a really, really awesome game!
-                                </span>
-                            </label>
-                        </div>
-                        <div class="form-socials">
-                            <small>check out my other social accounts.</small>
-                            <div class="socials">
-                                <div class="social linkedin">
-                                    <a href="https://www.linkedin.com/in/przemys%C5%82aw-majka-9540b01b7/"
-                                        target="blank">
-                                        <i class="fab fa-linkedin-in"></i>
-                                    </a>
+                    <form action="#" method="POST" id="form">
+
+                        <div class="form-control page-email active">
+                            <h2>What's your email?</h2>
+                            <div class="inner-wrap">
+                                <div class="input-wrap">
+                                    <input type="text" id="email" name="email" class="main-input">
+                                    <label for="email" class="js-label">EMAIL</label>
                                 </div>
-                                <div class="social google">
-                                    <a href="#" target="blank">
-                                        <i class="fas fa-globe"></i>
-                                    </a>
+                                <label class="newsletter">
+                                    <input type="checkbox" name="newsletter">
+                                    <span class="check">
+                                        <i class="fas fa-check"></i>
+                                    </span>
+                                    <span class="check-info">Have you ever played
+                                        Valorant? It's a really, really awesome game!
+                                    </span>
+                                </label>
+                            </div>
+                            <div class="form-socials">
+                                <small>check out my other social accounts.</small>
+                                <div class="socials">
+                                    <div class="social linkedin">
+                                        <a href="https://www.linkedin.com/in/przemys%C5%82aw-majka-9540b01b7/"
+                                            target="blank">
+                                            <i class="fab fa-linkedin-in"></i>
+                                        </a>
+                                    </div>
+                                    <div class="social google">
+                                        <a href="#" target="blank">
+                                            <i class="fas fa-globe"></i>
+                                        </a>
+                                    </div>
+                                    <div class="social github">
+                                        <a href="https://github.com/Pshemcio" target="blank">
+                                            <i class="fab fa-github"></i>
+                                        </a>
+                                    </div>
                                 </div>
-                                <div class="social github">
-                                    <a href="https://github.com/Pshemcio" target="blank">
-                                        <i class="fab fa-github"></i>
-                                    </a>
+                            </div>
+                            <a target="blank"
+                                href="https://auth.riotgames.com/login#client_id=play-valorant-web-prod&nonce=MTU2LDExMiwxODYs&prompt=signup&redirect_uri=https%3A%2F%2Fplayvalorant.com%2Fopt_in&response_type=token%20id_token&scope=account%20openid&state=c2lnbnVw&ui_locales=en"
+                                class="registered">Have you seen original page?
+                            </a>
+                        </div>
+                        <div class="form-control page-birthday">
+                            <div class="inner-wrap birthday-wrap">
+                                <h2>When were you born?</h2>
+                                <p>Let's find out how old you are.</p>
+                                <div class="input-wrap">
+                                    <input type="date" id="birthday" name="birthday" class="main-input"
+                                        max='2999-01-01'>
+                                    <p id="date-error" class="error-msg"></p>
                                 </div>
                             </div>
                         </div>
-                        <a target="blank"
-                            href="https://auth.riotgames.com/login#client_id=play-valorant-web-prod&nonce=MTU2LDExMiwxODYs&prompt=signup&redirect_uri=https%3A%2F%2Fplayvalorant.com%2Fopt_in&response_type=token%20id_token&scope=account%20openid&state=c2lnbnVw&ui_locales=en"
-                            class="registered">Have you seen original page?
-                        </a>
-                    </div>
-                    <div class="form-control page-birthday">
-                        <div class="inner-wrap birthday-wrap">
-                            <h2>When were you born?</h2>
-                            <p>Let's find out how old you are.</p>
-                            <div class="input-wrap">
-                                <input type="date" id="birthday" name="birthday" class="main-input" max='2999-01-01'>
-                                <p id="date-error" class="error-msg"></p>
+                        <div class="form-control page-username">
+                            <div class="inner-wrap username-wrap">
+                                <h2>Choose a username</h2>
+                                <p>I will know how may i call you!</p>
+                                <div class="input-wrap">
+                                    <input type="text" id="username" name="username" class="main-input"
+                                        autocomplete="off">
+                                    <label for="username" class="js-label">USERNAME</label>
+                                    <p id="username-error" class="error-msg"></p>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="form-control page-username">
-                        <div class="inner-wrap username-wrap">
-                            <h2>Choose a username</h2>
-                            <p>I will know how may i call you!</p>
-                            <div class="input-wrap">
-                                <input type="text" id="username" name="username" class="main-input" autocomplete="off">
-                                <label for="username" class="js-label">USERNAME</label>
-                                <p id="username-error" class="error-msg"></p>
+                        <div class="form-control page-password">
+                            <div class="inner-wrap password-wrap">
+                                <h2>Choose a password</h2>
+                                <p>Make sure it's a good one BUT don't write real one!</p>
+                                <div class="input-wrap">
+                                    <input type="password" id="password" name="password" class="main-input"
+                                        autocomplete="off">
+                                    <label for="password" class="js-label">PASSWORD</label>
+                                    <span class="show-password">
+                                        <i class="far fa-eye"></i>
+                                        <i class="far fa-eye-slash"></i>
+                                    </span>
+                                    <p id="password-error" class="error-msg"></p>
+                                </div>
+                                <ul class="password-checklist">
+                                    <li id="pass-strength">
+                                        <i class="fas fa-times-circle"></i>
+                                        <span>
+                                            Must be Okay strength or better.
+                                        </span>
+                                    </li>
+                                    <li id="pass-length">
+                                        <i class="fas fa-times-circle"></i>
+                                        <span>
+                                            Password is at least 8 characters long.
+                                        </span>
+                                    </li>
+                                    <li id="pass-number">
+                                        <i class="fas fa-times-circle"></i>
+                                        <span>
+                                            Password contains at least one letter or number.
+                                        </span>
+                                    </li>
+                                </ul>
+                                <div class="input-wrap">
+                                    <input type="password" id="confirm-password" name="confirm-password"
+                                        class="main-input" autocomplete="off">
+                                    <label for="confirm-password" class="js-label">CONFIRM PASSWORD</label>
+                                    <span class="show-password">
+                                        <i class="far fa-eye"></i>
+                                        <i class="far fa-eye-slash"></i>
+                                    </span>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="form-control page-password">
-                        <div class="inner-wrap password-wrap">
-                            <h2>Choose a password</h2>
-                            <p>Make sure it's a good one BUT don't write real one!</p>
-                            <div class="input-wrap">
-                                <input type="password" id="password" name="password" class="main-input"
-                                    autocomplete="off">
-                                <label for="password" class="js-label">PASSWORD</label>
-                                <span class="show-password">
-                                    <i class="far fa-eye"></i>
-                                    <i class="far fa-eye-slash"></i>
-                                </span>
-                                <p id="password-error" class="error-msg"></p>
-                            </div>
-                            <ul class="password-checklist">
-                                <li id="pass-strength">
-                                    <i class="fas fa-times-circle"></i>
-                                    <span>
-                                        Must be Okay strength or better.
-                                    </span>
-                                </li>
-                                <li id="pass-length">
-                                    <i class="fas fa-times-circle"></i>
-                                    <span>
-                                        Password is at least 8 characters long.
-                                    </span>
-                                </li>
-                                <li id="pass-number">
-                                    <i class="fas fa-times-circle"></i>
-                                    <span>
-                                        Password contains at least one letter or number.
-                                    </span>
-                                </li>
-                            </ul>
-                            <div class="input-wrap">
-                                <input type="password" id="confirm-password" name="confirm-password" class="main-input"
-                                    autocomplete="off">
-                                <label for="confirm-password" class="js-label">CONFIRM PASSWORD</label>
-                                <span class="show-password">
-                                    <i class="far fa-eye"></i>
-                                    <i class="far fa-eye-slash"></i>
-                                </span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="form-control page-message">
-                        <div class="inner-wrap message-wrap">
-                            <h2>Any questions/feedback?</h2>
-                            <p>Feel free to write them below!</p>
-                            <div class="input-wrap">
-                                <textarea name="message" id="message" class="main-input"></textarea>
+                        <div class="form-control page-message">
+                            <div class="inner-wrap message-wrap">
+                                <h2>Any questions or feedback?</h2>
+                                <p>Feel free to write them below!</p>
+                                <div class="input-wrap">
+                                    <textarea name="message" id="message" class="main-input"></textarea required>
                                 <label for="message" class="js-label">MESSAGE</label>
                                 <p id="message-error" class="error-msg"></p>
                             </div>
