Uncomment formspree, fix urls

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <h1>create an account</h1>
 
         <div class="form-wrap">
-            <form action="https://formspree.i/f/mbjpzwvb" method="POST" id="form">
+            <form action="https://formspree.io/f/mbjpzwvb" method="POST" id="form">
                 <form action="#" method="POST" id="form">
 
                     <form action="#" method="POST" id="form">
@@ -72,9 +72,9 @@
                                             <i class="fab fa-linkedin-in"></i>
                                         </a>
                                     </div>
-                                    <div class="social google">
-                                        <a href="#" target="blank">
-                                            <i class="fas fa-globe"></i>
+                                    <div class="social website">
+                                        <a href="https://pshemcio.github.io/weather-app/" target="blank">
+                                            <i class="fas fa-globe-americas"></i>
                                         </a>
                                     </div>
                                     <div class="social github">
