--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         rel="stylesheet">
 
     <!-- custom stylesheets -->
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/rwd.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/rwd.css">
 </head>
 
 <body>
@@ -190,7 +190,8 @@
         </div>
     </div>
     <script src="https://kit.fontawesome.com/a330ae9e9c.js" crossorigin="anonymous"></script>
-    <script src="main.js"></script>
+    <script type="text/javascript" src="js/lang-pack.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
 </body>
 
 </html>
