--- a/index.html
+++ b/index.html
@@ -94,8 +94,7 @@
                                 <h2>When were you born?</h2>
                                 <p>Let's find out how old you are.</p>
                                 <div class="input-wrap">
-                                    <input type="number" id="birthday" name="birthday" class="main-input"
-                                        max='2999-01-01'>
+                                    <input type="number" id="birthday" class="main-input">
                                     <label for="birthday" class="js-label">BIRTHDATE</label>
                                     <div class="birthdate hide-date">
                                         <div class="inner-birthdate">
@@ -113,7 +112,7 @@
                                                 placeholder="YYYY">
                                             <label for="year" class="js-label">year</label>
                                         </div>
-
+                                        <input type="hidden" id="test0">
                                     </div>
                                     <p id="date-error" class="error-msg"></p>
                                 </div>
