Update website link

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                                         </a>
                                     </div>
                                     <div class="social website">
-                                        <a href="https://pshemcio.github.io/weather-app/" target="blank">
+                                        <a href="https://przemekmajka.pl/" target="blank">
                                             <i class="fas fa-globe-americas"></i>
                                         </a>
                                     </div>
